# openapi/specs/v0.yaml
@@ -1295,6 +1295,11 @@ paths:
             - video
             - video_playlist
             - article
+            - lecture_note
+            - readings
+            - practice
+            - open_textbook
+            - lecture_audio
             type: string
             description: |-
               * `course` - course
@@ -1305,10 +1310,17 @@ paths:
               * `video` - video
               * `video_playlist` - video playlist
               * `article` - article
+              * `lecture_note` - lecture notes
+              * `readings` - readings
+              * `practice` - practice
+              * `open_textbook` - open textbooks
+              * `lecture_audio` - lecture audio
         description: "The type of learning resource             \n\n* `course` - course\n\
           * `program` - program\n* `learning_path` - learning path\n* `podcast` -\
           \ podcast\n* `podcast_episode` - podcast episode\n* `video` - video\n* `video_playlist`\
-          \ - video playlist\n* `article` - article"
+          \ - video playlist\n* `article` - article\n* `lecture_note` - lecture notes\n\
+          * `readings` - readings\n* `practice` - practice\n* `open_textbook` - open\
+          \ textbooks\n* `lecture_audio` - lecture audio"
       - in: query
         name: topic
         schema:
@@ -2312,6 +2324,319 @@ components:
           nullable: true
       required:
       - course_numbers
+    CourseLearningMaterial:
+      type: object
+      description: Serializer for the CourseLearningMaterial model
+      properties:
+        id:
+          type: integer
+          readOnly: true
+        content_file:
+          allOf:
+          - $ref: '#/components/schemas/ContentFile'
+          readOnly: true
+          nullable: true
+        content_tags:
+          type: array
+          items:
+            type: string
+            maxLength: 256
+          nullable: true
+      required:
+      - content_file
+      - id
+    CourseLearningMaterialResource:
+      type: object
+      description: Serializer for Article resources
+      properties:
+        id:
+          type: integer
+          readOnly: true
+        topics:
+          type: array
+          items:
+            $ref: '#/components/schemas/LearningResourceTopic'
+        position:
+          type: integer
+          readOnly: true
+          nullable: true
+        offered_by:
+          allOf:
+          - $ref: '#/components/schemas/LearningResourceOfferor'
+          readOnly: true
+          nullable: true
+        platform:
+          allOf:
+          - $ref: '#/components/schemas/LearningResourcePlatform'
+          readOnly: true
+          nullable: true
+        course_feature:
+          type: array
+          items:
+            type: string
+          readOnly: true
+          nullable: true
+        departments:
+          type: array
+          items:
+            $ref: '#/components/schemas/LearningResourceDepartment'
+          readOnly: true
+          nullable: true
+        certification:
+          type: boolean
+          readOnly: true
+        certification_type:
+          type: object
+          title: CourseResourceCertificationType
+          properties:
+            code:
+              enum:
+              - micromasters
+              - professional
+              - completion
+              - none
+            name:
+              type: string
+          required:
+          - code
+          - name
+          readOnly: true
+        prices:
+          type: array
+          items:
+            type: string
+            format: decimal
+            pattern: ^-?\d{0,10}(?:\.\d{0,2})?$
+          readOnly: true
+        resource_prices:
+          type: array
+          items:
+            $ref: '#/components/schemas/LearningResourcePrice'
+          readOnly: true
+        runs:
+          type: array
+          items:
+            $ref: '#/components/schemas/LearningResourceRun'
+          readOnly: true
+          nullable: true
+        image:
+          allOf:
+          - $ref: '#/components/schemas/LearningResourceImage'
+          nullable: true
+          readOnly: true
+        learning_path_parents:
+          type: array
+          items:
+            $ref: '#/components/schemas/MicroLearningPathRelationship'
+          readOnly: true
+        user_list_parents:
+          type: array
+          items:
+            $ref: '#/components/schemas/MicroUserListRelationship'
+          readOnly: true
+        views:
+          type: integer
+          readOnly: true
+        delivery:
+          type: array
+          items:
+            type: object
+            title: CourseResourceDeliveryInner
+            properties:
+              code:
+                enum:
+                - online
+                - hybrid
+                - in_person
+                - offline
+              name:
+                type: string
+            required:
+            - code
+            - name
+          readOnly: true
+        free:
+          type: boolean
+          description: Return true if the resource is free/has a free option
+          readOnly: true
+        resource_category:
+          type: string
+          description: Return the resource category of the resource
+          readOnly: true
+        format:
+          type: array
+          items:
+            type: object
+            title: CourseResourceFormatInner
+            properties:
+              code:
+                enum:
+                - synchronous
+                - asynchronous
+              name:
+                type: string
+            required:
+            - code
+            - name
+          readOnly: true
+        pace:
+          type: array
+          items:
+            type: object
+            title: CourseResourcePaceInner
+            properties:
+              code:
+                enum:
+                - self_paced
+                - instructor_paced
+              name:
+                type: string
+            required:
+            - code
+            - name
+          readOnly: true
+        children:
+          allOf:
+          - $ref: '#/components/schemas/LearningResourceRelationshipChildField'
+          nullable: true
+          readOnly: true
+        best_run_id:
+          type: integer
+          nullable: true
+          description: Return the best run id for the resource, if it has runs
+          readOnly: true
+        resource_type:
+          allOf:
+          - $ref: '#/components/schemas/CourseLearningMaterialResourceResourceTypeEnum'
+          default: lecture_note
+          readOnly: true
+        course_learning_material:
+          allOf:
+          - $ref: '#/components/schemas/CourseLearningMaterial'
+          readOnly: true
+        readable_id:
+          type: string
+          maxLength: 512
+        title:
+          type: string
+          maxLength: 256
+        description:
+          type: string
+          nullable: true
+        full_description:
+          type: string
+          nullable: true
+        last_modified:
+          type: string
+          format: date-time
+          nullable: true
+        published:
+          type: boolean
+        languages:
+          type: array
+          items:
+            type: string
+            maxLength: 24
+          nullable: true
+        url:
+          type: string
+          format: uri
+          nullable: true
+          maxLength: 2048
+        ocw_topics:
+          type: array
+          items:
+            type: string
+            maxLength: 128
+        professional:
+          type: boolean
+          readOnly: true
+        next_start_date:
+          type: string
+          format: date-time
+          nullable: true
+        availability:
+          nullable: true
+          oneOf:
+          - $ref: '#/components/schemas/AvailabilityEnum'
+          - $ref: '#/components/schemas/NullEnum'
+        completeness:
+          type: number
+          format: double
+        license_cc:
+          type: boolean
+        test_mode:
+          type: boolean
+        continuing_ed_credits:
+          type: string
+          format: decimal
+          pattern: ^-?\d{0,3}(?:\.\d{0,2})?$
+          nullable: true
+        location:
+          type: string
+          maxLength: 256
+        duration:
+          type: string
+          maxLength: 256
+        min_weeks:
+          type: integer
+          maximum: 2147483647
+          minimum: -2147483648
+          nullable: true
+        max_weeks:
+          type: integer
+          maximum: 2147483647
+          minimum: -2147483648
+          nullable: true
+        time_commitment:
+          type: string
+          maxLength: 256
+        min_weekly_hours:
+          type: integer
+          maximum: 2147483647
+          minimum: -2147483648
+          nullable: true
+        max_weekly_hours:
+          type: integer
+          maximum: 2147483647
+          minimum: -2147483648
+          nullable: true
+        require_summaries:
+          type: boolean
+          readOnly: true
+      required:
+      - best_run_id
+      - certification
+      - certification_type
+      - children
+      - course_feature
+      - course_learning_material
+      - delivery
+      - departments
+      - format
+      - free
+      - id
+      - image
+      - learning_path_parents
+      - offered_by
+      - pace
+      - platform
+      - position
+      - prices
+      - professional
+      - readable_id
+      - require_summaries
+      - resource_category
+      - resource_prices
+      - resource_type
+      - runs
+      - title
+      - user_list_parents
+      - views
+    CourseLearningMaterialResourceResourceTypeEnum:
+      type: string
+      enum:
+      - lecture_note
     CourseNumber:
       type: object
       description: Serializer for CourseNumber
@@ -3285,6 +3610,7 @@ components:
       - $ref: '#/components/schemas/PodcastEpisodeResource'
       - $ref: '#/components/schemas/VideoResource'
       - $ref: '#/components/schemas/VideoPlaylistResource'
+      - $ref: '#/components/schemas/CourseLearningMaterialResource'
       discriminator:
         propertyName: resource_type
         mapping:
@@ -3296,6 +3622,7 @@ components:
           podcast_episode: '#/components/schemas/PodcastEpisodeResource'
           video: '#/components/schemas/VideoResource'
           video_playlist: '#/components/schemas/VideoPlaylistResource'
+          lecture_note: '#/components/schemas/CourseLearningMaterialResource'
     LearningResourceBaseSchool:
       type: object
       description: |-
@@ -5516,17 +5843,20 @@ components:
       - LEARNING_PATH_ITEMS
       - PODCAST_EPISODES
       - PLAYLIST_VIDEOS
+      - COURSE_LEARNING_MATERIALS
       type: string
       description: |-
         * `PROGRAM_COURSES` - Program Courses
         * `LEARNING_PATH_ITEMS` - Learning Path Items
         * `PODCAST_EPISODES` - Podcast Episodes
         * `PLAYLIST_VIDEOS` - Playlist Videos
+        * `COURSE_LEARNING_MATERIALS` - Course Learning Materials
       x-enum-descriptions:
       - Program Courses
       - Learning Path Items
       - Podcast Episodes
       - Playlist Videos
+      - Course Learning Materials
     ResourceTypeEnum:
       enum:
       - news
